@@ -26,7 +26,7 @@
       "part3 platform 2",
       "part 3 button 3rd"
     ],
-    "game version": "0.7.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 659,
     "max players": 2,
     "number of variable": 24,
