@@ -17,7 +17,7 @@
       "pt3 box2",
       "pt3 walkway"
     ],
-    "game version": "0.7.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 629,
     "max players": 3,
     "number of variable": 11,
