@@ -11,7 +11,7 @@
       "rong button",
       "solution"
     ],
-    "game version": "0.7.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 659,
     "max players": 2,
     "number of variable": 15,
