@@ -10,7 +10,7 @@
       "group 0",
       "endcar"
     ],
-    "game version": "0.8.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 569,
     "max players": 2,
     "number of variable": 5,
