@@ -53,7 +53,7 @@
       "end trap",
       "To Be Continued"
     ],
-    "game version": "0.8.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 588,
     "max players": 2,
     "number of variable": 5,
