@@ -3572,19 +3572,7 @@
     "type": "goon"
   },
   {
-    "x": 7576,
-    "y": 196,
-    "z": 0,
-    "type": "goon"
-  },
-  {
     "x": 7742,
-    "y": 196,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 7937,
     "y": 196,
     "z": 0,
     "type": "goon"
@@ -3602,26 +3590,8 @@
     "type": "goon"
   },
   {
-    "x": 9330,
-    "y": 408,
-    "z": 0,
-    "type": "goon"
-  },
-  {
     "x": 10537,
     "y": 429,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 11087,
-    "y": 469,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 12284,
-    "y": 351,
     "z": 0,
     "type": "goon"
   },
@@ -3634,12 +3604,6 @@
   {
     "x": 13222,
     "y": 373,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 13752,
-    "y": 305,
     "z": 0,
     "type": "goon"
   }
