@@ -13,7 +13,7 @@
       "Pizza Door",
       "Pizza Door 2"
     ],
-    "game version": "0.9.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 0,
     "max players": 2,
     "number of variable": 5,
