@@ -1205,12 +1205,6 @@
     "type": "goon"
   },
   {
-    "x": 4098,
-    "y": -315,
-    "z": 0,
-    "type": "goon"
-  },
-  {
     "x": 6460,
     "y": -227,
     "z": 0,
