@@ -2845,17 +2845,5 @@
     "y": 484,
     "z": 0,
     "type": "goon"
-  },
-  {
-    "x": 8937,
-    "y": -409,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 8924,
-    "y": -2226,
-    "z": 0,
-    "type": "goon"
   }
 ]
