@@ -7,7 +7,7 @@
     "level_id": 360846075,
     "spawnX": 196,
     "groups": ["group 0"],
-    "game version": "0.9.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 629.5999755859375,
     "max players": 2,
     "number of variable": 5,
