@@ -3158,12 +3158,6 @@
     "type": "goon"
   },
   {
-    "x": 5229,
-    "y": 45,
-    "z": 0,
-    "type": "goon"
-  },
-  {
     "x": 6994,
     "y": -20,
     "z": 0,
@@ -3176,32 +3170,8 @@
     "type": "goon"
   },
   {
-    "x": 13264,
-    "y": -708,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 15294,
-    "y": 97,
-    "z": 0,
-    "type": "goon"
-  },
-  {
     "x": 16955,
     "y": 332,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 17820,
-    "y": 209,
-    "z": 0,
-    "type": "goon"
-  },
-  {
-    "x": 19296,
-    "y": 347,
     "z": 0,
     "type": "goon"
   }
