@@ -7,7 +7,7 @@
     "level_id": 4,
     "spawnX": 400,
     "groups": ["group 0"],
-    "game version": "0.7.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": -690,
     "max players": 2,
     "number of variable": 5,
