@@ -738,7 +738,7 @@
     "dz": 5,
     "x": 3990,
     "y": 670,
-    "z": 2000,
+    "z": 4941.84228515625,
     "type": "holo",
     "group": -1
   },
@@ -1225,7 +1225,7 @@
   {
     "coin id": 108,
     "x": 8968,
-    "y": 413,
+    "y": 430,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1233,7 +1233,7 @@
   {
     "coin id": 109,
     "x": 8909,
-    "y": 347,
+    "y": 330,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1241,7 +1241,7 @@
   {
     "coin id": 110,
     "x": 8842,
-    "y": 294,
+    "y": 280,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1249,7 +1249,7 @@
   {
     "coin id": 111,
     "x": 8770,
-    "y": 260,
+    "y": 240,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1257,7 +1257,7 @@
   {
     "coin id": 112,
     "x": 8696,
-    "y": 239,
+    "y": 230,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1265,7 +1265,7 @@
   {
     "coin id": 113,
     "x": 8631,
-    "y": 236,
+    "y": 250,
     "z": 150,
     "type": "coin",
     "group": -1
@@ -1274,47 +1274,47 @@
     "coin id": 114,
     "x": 8631,
     "y": 213,
-    "z": 180,
+    "z": 200,
     "type": "coin",
     "group": -1
   },
   {
     "coin id": 115,
     "x": 8630,
-    "y": 186,
-    "z": 210,
+    "y": 170,
+    "z": 240,
     "type": "coin",
     "group": -1
   },
   {
     "coin id": 116,
     "x": 8629,
-    "y": 164,
-    "z": 265,
+    "y": 130,
+    "z": 280,
     "type": "coin",
     "group": -1
   },
   {
     "coin id": 117,
     "x": 8630,
-    "y": 144,
-    "z": 305,
+    "y": 90,
+    "z": 320,
     "type": "coin",
     "group": -1
   },
   {
     "coin id": 118,
     "x": 8628,
-    "y": 125,
-    "z": 340,
+    "y": 70,
+    "z": 370,
     "type": "coin",
     "group": -1
   },
   {
     "coin id": 119,
     "x": 8626,
-    "y": 102,
-    "z": 405,
+    "y": 63.150299072265625,
+    "z": 444.0186462402344,
     "type": "coin",
     "group": -1
   },
@@ -1337,7 +1337,7 @@
   {
     "coin id": 122,
     "x": 8735,
-    "y": 27,
+    "y": 5.809257507324219,
     "z": 550,
     "type": "coin",
     "group": -1
@@ -1345,7 +1345,7 @@
   {
     "coin id": 123,
     "x": 8788,
-    "y": -1,
+    "y": -47.79621887207031,
     "z": 550,
     "type": "coin",
     "group": -1
@@ -1353,7 +1353,7 @@
   {
     "coin id": 124,
     "x": 8848,
-    "y": -26,
+    "y": -83.39158630371094,
     "z": 550,
     "type": "coin",
     "group": -1
@@ -1361,7 +1361,7 @@
   {
     "coin id": 125,
     "x": 8912,
-    "y": -48,
+    "y": -60,
     "z": 550,
     "type": "coin",
     "group": -1
@@ -1377,7 +1377,7 @@
   {
     "coin id": 127,
     "x": 8972,
-    "y": -82,
+    "y": -99.65895080566406,
     "z": 460,
     "type": "coin",
     "group": -1
@@ -1385,7 +1385,7 @@
   {
     "coin id": 128,
     "x": 8971,
-    "y": -105,
+    "y": -150.91326904296875,
     "z": 390,
     "type": "coin",
     "group": -1
@@ -1393,7 +1393,7 @@
   {
     "coin id": 129,
     "x": 8972,
-    "y": -135,
+    "y": -220.6459197998047,
     "z": 275,
     "type": "coin",
     "group": -1
@@ -1401,8 +1401,8 @@
   {
     "coin id": 130,
     "x": 8974,
-    "y": -174,
-    "z": 75,
+    "y": -246.0736846923828,
+    "z": 162.9972686767578,
     "type": "coin",
     "group": -1
   },
