@@ -21,7 +21,7 @@
       "thing",
       "end"
     ],
-    "game version": "0.7.0_Early_Access",
+    "game version": "0.9.1_Early_Access",
     "spawnY": 700,
     "max players": 2,
     "number of variable": 12,
